Proportional editing does not influence all objects in edit mode #61777

Closed
opened 2019-02-21 05:00:27 +01:00 by Yadiel Duarte · 18 comments

System Information
Operating system: Windows 10 home 64 bit
Graphics card: Nvidia GeForce GTX 1070

Blender Version
Broken:
2.80, 7d792976e1, blender2.8, 2019-02-18

When enabling proportional editing with two meshes in edit mode, the proportional editing does not affect the other mesh, as if connected proportional editing is enabled instead. Proportional editing works on either of meshes when they're both in edit mode, but doesn't influence the other at all.

  1. Create two separate objects. (two intersecting spheres for example)
  2. Select both objects and enter edit mode
  3. enable proportional editing.
  4. Select and move vertexes on one or both objects that are within proportional editing range.
**System Information** Operating system: Windows 10 home 64 bit Graphics card: Nvidia GeForce GTX 1070 **Blender Version** Broken: 2.80, 7d792976e100, blender2.8, 2019-02-18 When enabling proportional editing with two meshes in edit mode, the proportional editing does not affect the other mesh, as if connected proportional editing is enabled instead. Proportional editing works on either of meshes when they're both in edit mode, but doesn't influence the other at all. 1. Create two separate objects. (two intersecting spheres for example) 2. Select both objects and enter edit mode 3. enable proportional editing. 4. Select and move vertexes on one or both objects that are within proportional editing range.
Author

Added subscriber: @Drakmann

Added subscriber: @Drakmann

Added subscribers: @ideasman42, @ZedDB

Added subscribers: @ideasman42, @ZedDB
Campbell Barton was assigned by Sebastian Parborg 2019-02-21 16:20:11 +01:00

@ideasman42 bug or not?

@ideasman42 bug or not?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Campbell Barton was unassigned by Philipp Oeser 2019-05-09 09:24:38 +02:00
Philipp Oeser self-assigned this 2019-05-09 09:24:38 +02:00
Member

Think this would be nice to support, will check on this...

Think this would be nice to support, will check on this...

Added subscriber: @Gvgeo-1

Added subscriber: @Gvgeo-1

@lichtwerk I just saw you start working on this.
I was trying to solve this for couple days.
I was still at an early stage, and had many problems.
All I had was a prototype, working for vertices for simple mesh.
I have checked only vert slide, to work together.
By my calculations there are maybe 100 cases need checking/work (>_<)

If you didn't start (or finish already) maybe can make use of it ...or maybe it is as bad, as I feel it is.
Either way I'm looking forward to see how it should be done
Especially if you use parts from this diff, to see how you solve some problems. (can only hope.)

transform_multiedit.diff

@lichtwerk I just saw you start working on this. I was trying to solve this for couple days. I was still at an early stage, and had many problems. All I had was a prototype, working for vertices for simple mesh. I have checked only vert slide, to work together. By my calculations there are maybe 100 cases need checking/work (>_<) If you didn't start (or finish already) maybe can make use of it ...or maybe it is as bad, as I feel it is. Either way I'm looking forward to see how it should be done Especially if you use parts from this diff, to see how you solve some problems. (can only hope.) [transform_multiedit.diff](https://archive.blender.org/developer/F7025393/transform_multiedit.diff)
Member

@Gvgeo-1: ah, didnt know you were on it...

Will check on this (might take a bit though)

@Gvgeo-1: ah, didnt know you were on it... Will check on this (might take a bit though)

That's okay.

I avoid claiming tasks without reason.
I try multiple bugs, and drop them if I can't finish them.
Usually I wait till they patched, and see how should have been done.

This is one of these cases, it looks too complex, for me to make a patch of it.
But because I had a basic (working?) idea, thought/hope it may help you.

That's okay. I avoid claiming tasks without reason. I try multiple bugs, and drop them if I can't finish them. Usually I wait till they patched, and see how should have been done. This is one of these cases, it looks too complex, for me to make a patch of it. But because I had a basic (working?) idea, thought/hope it may help you.
Member

note: there are D3993 and D5163 to check on as well...

note: there are [D3993](https://archive.blender.org/developer/D3993) and [D5163](https://archive.blender.org/developer/D5163) to check on as well...

Added subscriber: @AlanT

Added subscriber: @AlanT

At the moment, while proportional editing, selected vertices will only 'pull' unselected vertices from the same mesh. D3993 or D5163 allows selected vertices from one mesh to pull vertices from other meshes. On their own these patches don't fix this task.

From memory, another problem that needs addressing before this task is complete is that a mesh without vertices selected will not have its data included in the number crunching. For non-proportional editing that's okay, for proportional editing it causes the problems described in this task.

At the moment, while proportional editing, selected vertices will only 'pull' unselected vertices from the same mesh. [D3993](https://archive.blender.org/developer/D3993) or [D5163](https://archive.blender.org/developer/D5163) allows selected vertices from one mesh to pull vertices from other meshes. On their own these patches don't fix this task. From memory, another problem that needs addressing before this task is complete is that a mesh without vertices selected will not have its data included in the number crunching. For non-proportional editing that's okay, for proportional editing it causes the problems described in this task.

@lichtwerk This task has was assigned to you a few months ago, how's it going? If you're not making any progress would you allow me to take it off your hands? If you're ok with me taking it off your hands, I'll include it into D3993/D5163 to make a complete patch that covers this task.

@lichtwerk This task has was assigned to you a few months ago, how's it going? If you're not making any progress would you allow me to take it off your hands? If you're ok with me taking it off your hands, I'll include it into [D3993](https://archive.blender.org/developer/D3993)/D5163 to make a complete patch that covers this task.
Philipp Oeser removed their assignment 2019-08-13 15:44:35 +02:00
Alan Troth was assigned by Philipp Oeser 2019-08-13 15:44:35 +02:00
Member

Hi @AlanT,
yes, I think this in good hands if you take over (I basically claimed this as this was TODO without knowing anyone was actively working on this... and I have hands full of bugs anyways...)
Thx for poking me, makes total sense, will assign to you then [looking forward to your work]

Hi @AlanT, yes, I think this in good hands if you take over (I basically claimed this as this was TODO without knowing anyone was actively working on this... and I have hands full of bugs anyways...) Thx for poking me, makes total sense, will assign to you then [looking forward to your work]

Added subscriber: @ilio

Added subscriber: @ilio

Any update on this? This is a much needed feature and still broken in 2.81a.

Any update on this? This is a much needed feature and still broken in 2.81a.

This issue was referenced by a64b8aca39

This issue was referenced by a64b8aca394fbff622309613d7efef2cae28c0d4

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61777
No description provided.