Fix T61777: Proportional editing doesn't work with multi edit-mode