source/blender/editors/transform/transform_convert_curve.c
@@ -100,6 +100,7 @@ void createTransCurveVerts(TransInfo *t)
     int count = 0, countsel = 0;
     int count_pt = 0, countsel_pt = 0;
     const bool is_prop_edit = (t->flag & T_PROP_EDIT) != 0;
+    const bool is_prop_connected = (t->flag & T_PROP_CONNECTED) != 0;
     View3D *v3d = t->view;
     short hide_handles = (v3d != NULL) ? (v3d->overlay.handle_display == CURVE_HANDLE_NONE) :
                                          false;
@@ -145,8 +146,9 @@ void createTransCurveVerts(TransInfo *t)
         }
       }
     }
-    /* note: in prop mode we need at least 1 selected */
-    if (countsel == 0) {
+
+    /* Support other objects using PET to adjust these, unless connected is enabled. */
+    if (((is_prop_edit && !is_prop_connected) ? count : countsel) == 0) {
       tc->data_len = 0;
       continue;
     }
