source/blender/editors/transform/transform_convert_lattice.c
@@ -53,6 +53,7 @@ void createTransLatticeVerts(TransInfo *t)
     int a;
     int count = 0, countsel = 0;
     const bool is_prop_edit = (t->flag & T_PROP_EDIT) != 0;
+    const bool is_prop_connected = (t->flag & T_PROP_CONNECTED) != 0;
 
     bp = latt->def;
     a = latt->pntsu * latt->pntsv * latt->pntsw;
@@ -68,9 +69,10 @@ void createTransLatticeVerts(TransInfo *t)
       bp++;
     }
 
-    /* note: in prop mode we need at least 1 selected */
-    if (countsel == 0) {
-      return;
+    /* Support other objects using PET to adjust these, unless connected is enabled. */
+    if (((is_prop_edit && !is_prop_connected) ? count : countsel) == 0) {
+      tc->data_len = 0;
+      continue;
     }
 
     if (is_prop_edit) {
